bonus: JRE minimal via jlink